app/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	:root {
		interpolate-size: allow-keywords;

		--background: 260 82% 30%;
		--foreground: 0 100% 100%;

		--card: 0 0% 100%;
		--card-foreground: 222.2 84% 4.9%;

		--popover: 260 84% 51%;
		--popover-foreground: 0 100% 100%;

		--primary: 260 82% 30%;
		--primary-foreground: 0 100% 100%;

		--secondary: 360 100% 67%;
		--secondary-foreground: 210 40% 98%;

		--secondary-muted: 0 100% 80%;
		--secondary-muted-foreground: 0 100% 0%;

		--muted: 260 84% 95%;
		--muted-foreground: 0 100% 0%;

		--accent: 260 84% 51%;
		--accent-foreground: 0 100% 100%;

		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 360 100% 88%;

		--border: 214.3 31.8% 91.4%;
		--input: 214.3 31.8% 91.4%;
		--ring: 222.2 84% 4.9%;

		--radius: 0.5rem;

		.prose {
			@apply flex flex-col gap-y-4 text-pretty text-base lg:text-lg;
			&--lg {
				@apply text-lg lg:text-xl;
			}
			::marker {
				@apply font-bold text-secondary;
			}
			h1,
			h2,
			h3,
			h4,
			h5,
			h6 {
				@apply mt-4 first:mt-0 last:mb-0;
			}

			ol,
			ul {
				@apply flex flex-col items-start gap-y-2 ps-5;
			}
			li {
				@apply ps-1;
			}
			ul {
				list-style-type: disc;
				ul {
					list-style-type: circle;
				}
			}
			ol {
				list-style-type: number;
				ol {
					list-style-type: lower-alpha;
					ol {
						list-style-type: lower-roman;
					}
				}
			}
			li > p {
				@apply first:mt-0 last:mb-0;
			}
			[data-type="emoji"] > img {
				@apply my-0 inline-block;
			}
			pre {
				@apply overflow-auto rounded-lg bg-black/80 p-4 text-white;
			}
			code {
				@apply font-mono;
			}
			table {
				td,
				th {
					@apply border border-primary p-1;
				}
				th {
					@apply bg-muted text-muted-foreground;
				}
			}
			a {
				@apply underline decoration-inherit underline-offset-4 duration-200 hover:underline-offset-2;
			}
		}
		.text-center .prose {
			ol,
			ul {
				@apply items-center;
			}
		}
	}

	.theme--light {
		--background: 0 0% 100%;
		--foreground: 0 0% 0%;

		--card: 260 82% 30%;
		--card-foreground: 0 0% 100%;

		--popover: 260 84% 51%;
		--popover-foreground: 0 100% 100%;

		--primary: 260 82% 30%;
		--primary-foreground: 0 0% 100%;

		--secondary: 360 100% 67%;
		--secondary-foreground: 210 40% 98%;

		--secondary-muted: 0 100% 80%;
		--secondary-muted-foreground: 0 100% 100%%;

		--muted: 260 84% 95%;
		--muted-foreground: 0 0% 0%;

		--accent: 260 84% 51%;
		--accent-foreground: 0 100% 100%;

		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 360 100% 88%;
		&.section {
			& + & {
				@apply pt-0;
			}
		}
	}
	.theme--image,
	.theme--dark {
		--background: 260 82% 30%;
		--foreground: 0 100% 100%;

		--card: 260 84% 51%;
		--card-foreground: 0, 100%, 100%;

		--popover: 260 84% 51%;
		--popover-foreground: 0 100% 100%;

		--primary: 260 82% 30%;
		--primary-foreground: 0 100% 100%;

		--secondary: 360 100% 67%;
		--secondary-foreground: 210 40% 98%;

		--secondary-muted: 0 100% 80%;
		--secondary-muted-foreground: 0 100% 0%;

		--muted: 260 84% 51%;
		--muted-foreground: 0 100% 100%;

		--accent: 260 100% 50%;
		--accent-foreground: 0, 100%, 100%;

		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 360 100% 88%;
	}

	.theme--muted {
		--background: 260 84% 95%;
		--foreground: 0 0% 7%;

		--card: 260 82% 30%;
		--card-foreground: 0 0% 100%;

		--popover: 260 84% 51%;
		--popover-foreground: 0 100% 100%;

		--primary: 260 82% 30%;
		--primary-foreground: 0 0% 100%;

		--secondary: 360 100% 67%;
		--secondary-foreground: 210 40% 98%;

		--secondary-muted: 0 100% 80%;
		--secondary-muted-foreground: 0 100% 100%%;

		--muted: 260 82% 30%;
		--muted-foreground: 0 100% 100%;

		--accent: 260 84% 51%;
		--accent-foreground: 0 100% 100%;

		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 360 100% 88%;

		&.section {
			& + & {
				@apply pt-0;
			}
		}
	}
	.theme--alternate-muted {
		--background: 0 100% 80%;
		--foreground: 0 0% 7%;

		--card: 260 82% 30%;
		--card-foreground: 0 0% 100%;

		--popover: 260 84% 51%;
		--popover-foreground: 0 100% 100%;

		--primary: 260 82% 30%;
		--primary-foreground: 0 0% 100%;

		--secondary: 360 100% 67%;
		--secondary-foreground: 210 40% 98%;

		--secondary-muted: 0 100% 80%;
		--secondary-muted-foreground: 0 100% 100%%;

		--muted: 260 82% 30%;
		--muted-foreground: 0 100% 100%;

		--accent: 260 84% 51%;
		--accent-foreground: 0 100% 100%;

		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 360 100% 88%;

		&.section {
			& + & {
				@apply pt-0;
			}
		}
	}
	.theme--alternate {
		--background: 360 100% 67%;
		--foreground: 0 100% 100%;

		--card: 260 84% 51%;
		--card-foreground: 0, 100%, 100%;

		--popover: 260 84% 51%;
		--popover-foreground: 0 100% 100%;

		--primary: 260 82% 30%;
		--primary-foreground: 0 100% 100%;

		--secondary: 260 84% 51%;
		--secondary-foreground: 0 100% 100%;

		--secondary-muted: 0 100% 80%;
		--secondary-muted-foreground: 0 100% 0%;

		--muted: 0 100% 80%;
		--muted-foreground: 0 100% 0%;

		--accent: 260 100% 50%;
		--accent-foreground: 0, 100%, 100%;

		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 360 100% 88%;
		&.section {
			& + & {
				@apply pt-0;
			}
		}
	}

	.theme--dark {
		&.section {
			& + & {
				@apply pt-0;
			}
		}
	}

	::selection {
		@apply bg-secondary text-secondary-foreground;
	}

	::-moz-selection {
		@apply bg-secondary text-secondary-foreground;
	}

	::-webkit-scrollbar {
		@apply h-1 w-1;
	}

	::-webkit-scrollbar-track {
		@apply rounded-xl bg-purple-700/50;
	}

	::-webkit-scrollbar-thumb {
		@apply rounded-xl bg-pink;
	}
}
@layer base {
	h1,
	.h1,
	h2,
	.h2,
	h3,
	.h3,
	h4,
	.h4,
	h5,
	.h5,
	h6,
	.h6 {
		@apply font-heading font-bold;
	}
	.text-display {
		@apply text-4xl sm:text-6xl lg:text-7xl;
	}
	h1,
	.h1 {
		@apply text-3xl sm:text-4xl lg:text-5xl;
	}

	h2,
	.h2 {
		@apply text-3xl lg:text-4xl;
	}

	h3,
	.h3 {
		@apply text-2xl lg:text-3xl;
	}

	h4,
	.h4 {
		@apply text-xl sm:text-2xl;
	}

	h5,
	.h5 {
		@apply text-xl;
	}

	h6,
	.h6 {
		@apply text-base;
	}
}

@layer components {
	.eyebrow {
		@apply text-sm font-bold uppercase tracking-wide text-secondary;
	}
	.btn {
		@apply inline-flex items-center justify-center gap-x-1 overflow-hidden rounded-full px-6 py-3 text-center text-sm font-bold uppercase ring-1 ring-inset transition-all disabled:cursor-not-allowed disabled:opacity-50 lg:px-6 lg:py-3;
	}
	.btn--sm {
		@apply p-1.5 text-xs lg:px-3 lg:py-2;
	}

	.btn--primary {
		@apply bg-secondary text-secondary-foreground ring-transparent;
	}

	.btn--secondary {
		@apply text-secondary ring-secondary hover:bg-secondary hover:text-secondary-foreground;
	}

	.btn--text-link {
		@apply text-card-foreground ring-card-foreground hover:bg-card-foreground hover:text-card;
	}
}

@layer utilities {
	/* Hide scrollbar for Chrome, Safari and Opera */
	.no-scrollbar::-webkit-scrollbar {
		display: none;
	}
	/* Hide scrollbar for IE, Edge and Firefox */
	.no-scrollbar {
		-ms-overflow-style: none; /* IE and Edge */
		scrollbar-width: none; /* Firefox */
	}
}

html.lenis,
html.lenis body {
	height: auto;
}

html.lenis-stopped body {
	@apply pr-1;
}

.lenis.lenis-smooth {
	scroll-behavior: auto;
}

.lenis.lenis-smooth [data-lenis-prevent] {
	overscroll-behavior: contain;
}

.lenis.lenis-stopped {
	overflow: hidden;
}

.lenis.lenis-scrolling iframe {
	pointer-events: none;
}

.mask-edges {
	--fade: 4rem;

	-webkit-mask-image: linear-gradient(to right, transparent 0, #000 var(--fade), #000 calc(100% - var(--fade)), transparent 100%);
	mask-image: linear-gradient(to right, transparent 0, #000 var(--fade), #000 calc(100% - var(--fade)), transparent 100%);

	-webkit-mask-repeat: no-repeat;
	mask-repeat: no-repeat;

	-webkit-mask-size: 100% 100%;
	mask-size: 100% 100%;
}

